welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:7: error: not found: value y
	setPos(0,y+1)
                 ^